# NumerischeAlgorithmen

./: CMakeLists.txt  README.md
blatt1/: CMakeLists.txt  blatt1.cpp
blatt1/aufgabe1/: notizen.txt
blatt1/aufgabe2/: aufgabe2.cpp
blatt1/aufgabe3/: aufgabe3.cpp
blatt1/aufgabe4/: aufgabe4.cpp
blatt1/aufgabe5/: aufgabe5.cpp
blatt2/: CMakeLists.txt
blatt2/aufgabe1/: aufgabe1.cpp
blatt2/aufgabe10/: aufgabe10.cpp
blatt2/aufgabe2/: aufgabe2.cpp
blatt2/aufgabe8/: aufgabe8.cpp
blatt2/aufgabe9/: aufgabe9.cpp
blatt3/: CMakeLists.txt
blatt3/assets/: Prog_C++2019_14-wrongsyntax.cpp
blatt3/aufgabe11/: aufgabe11.cpp
blatt3/aufgabe12/: aufgabe12.cpp
blatt3/aufgabe13/: aufgabe13.cpp
blatt3/aufgabe14/: aufgabe14.cpp
blatt3/aufgabe15/: aufgabe15.cpp
blatt4/: CMakeLists.txt
blatt4/assets/: Prog_C++2019_19-wrong_syntax.cpp
blatt4/aufgabe16/: aufgabe16.cpp
blatt4/aufgabe17/: aufgabe17.cpp
blatt4/aufgabe18/: aufgabe18.cpp
blatt4/aufgabe19/: aufgabe19.cpp
blatt4/aufgabe20/: aufgabe20.cpp
blatt5/: CMakeLists.txt
blatt5/assets/: Prog_C++2019_24-wrong_syntax.cpp
blatt5/aufgabe21/: aufgabe21.cpp
blatt5/aufgabe22/: aufgabe22.cpp
blatt5/aufgabe23/: aufgabe23.cpp
blatt5/aufgabe24/: aufgabe24.cpp
blatt5/aufgabe25/: aufgabe25.cpp
blatt6/: CMakeLists.txt
blatt6/assets/: Prog_C++2019_29-wrong_syntax.cpp  col_A.txt  row_A.txt  val_A.txt
blatt6/aufgabe26/: aufgabe26.cpp
blatt6/aufgabe27/: aufgabe27.cpp
blatt7/: CMakeLists.txt
blatt7/aufgabe31/: header.h  (+3 more)
blatt8/: CMakeLists.txt
projekt/: CMakeLists.txt  README.md  libInstall.sh
(+25 files in other folders)
